# experiments

./: .gitignore
asm/: bare.C  bare.s  bare_gcc.s  rms.c  square.c  test.s
asm/gasm_test/: REFERENCE  exit_sys_call.s
asm/inline_asm/: clobber.cc  kernel_examples.cc  test.cc
c++/condition_variable/: test_cv.cc
c++/dbl_ptr/: dbl_ptr.cc
c++/explicit/: explicit_test.cc
c++/future/: core  test.cc
c++/is_integral/: is_integral_test.cc
c++/lambdas/: test.cc
c++/move_only/: lvalue_move.cc  test_moveonly.cc
c++/perfect_forwarding_constructor/: perfect_fw_ctor.cc
c++/references/: test_refs.cc
c++/same_type_template/: same_type.cc
c++/scoped_enum/: test.cc
c++/static_initialization_fiasco/: a.cc  a.s  a_asm.cc  a_asm.s  b.cc
c++/struct_vector/: test_vector_struct.cc
c++/tag_dispatch/: tag_dispatch.cc  template_specialization.cc
cpp_algorithms/: Makefile  accumulate.cc  common.hh  inner_product.cc  iota.cc  iota_mca  reduce.cc  scan.cc  transform_reduce.cc
evil_inheritance/: concept.cc
intel_pt/: add_vectors.cc  out.perf.folded
llvm-mca/: Makefile  dot_product.S  dot_product.cc  loop_benchmark.S  loop_benchmark.cc  loop_mca.txt  mca_dot.txt
memory_models/: acq_rel.cc  relaxed.cc  seq_cst_order.cc
os-tutorial-notes/: nasm.md  qemu.md
perf_events/: compile_flags.txt  mmap.cc  mmap_test  perf_event  test_1.cc  test_file
stack_journey/: add.c  add.s  add_multi_params.c  add_multi_params_red_zone.c  gdb.txt
stats/: stats_practice.ipynb
torch/: CMakeLists.txt  out.perf.folded  perf.data.old  test_torch.cc  test_torch.py
(+94 files in other folders)
